fix slideout action button layout bug

--- a/views/themes/publish2/assets/stylesheets/publish2/publish2.scss
+++ b/views/themes/publish2/assets/stylesheets/publish2/publish2.scss
@@ -135,7 +135,7 @@ tr.is-showing {
 }
 
 .qor-action-forms+.qor-pulish2__action {
-    margin-top: 48px;
+    margin-top: 60px;
 }
 
 .qor-pulish2__action {
